# uv_template

./: Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: CONTRIBUTING.md  gen_ref_pages.py  index.md  reference.md
src/: main.py
src/configs/: settings.py
src/modules/first_module/: __init__.py  first_util.py
tests/: test_default_utils.py
tools/: first_tool.py
utils/: default_utils.py
